index.css
:root {
    --bg: #ccb55a;
    --fg: #314c73;
}

@font-face {
    font-family: 'Washington';
    src: url(font/WashingtonBoldDynamic.otf);
}

@font-face {
    font-family: 'Cinema';
    src: url(font/TBCinemaRGothic-M.ttf);
}

@font-face {
    font-family: 'Dodam';
    src: url(font/Typo_DodamM.ttf);
}

body {
    background: var(--bg);
}

@media all and (orientation: landscape) {
    body {
        flex-direction: row;
    }
}

@media all and (orientation: portrait) {
    body {
        flex-direction: column;
    }
}

/* CARD PREVIEW */

#preview > * {
    position: absolute;
}

#card-back {top: 50px; left: 50px; width: 295px;}

.card-art-mask {
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    clip-path: polygon(
        0 0,
        100% 0,
        100% 345px,
        0 345px
    );
}

#card-art-under,
#card-art-over {
    position: absolute;
    top: 198px;
    left: 198px;
    width: 295px;
    transform: translate(-50%, -50%);
}

#card-top,
#card-element-left,
#card-element-center,
#card-element-right {top: 3px;}

.bronze #card-top {left: 25px;}
.silver #card-top {left: 24px;}
.gold #card-top {left: 19px;}
.diamond #card-top {left: 23px;}

#card-element-icon {top: 15px; left: 37px; width: 56px;}

#card-element-left,
#card-element-center,
#card-element-right {left: 25px;}
#card-element-left {clip-path: polygon(0 0, 84px 0, 84px 100%, 0 100%);}
#card-element-center {
    transform: scaleX(65);
    transform-origin: 84px;
    clip-path: polygon(84px 0, 85px 0, 85px 100%, 84px 100%);
}
#card-element-right {
    left: 94px;
    clip-path: polygon(80px 0, 100% 0, 100% 100%, 80px 100%);
}

.gold #card-element-left,
.gold #card-element-center,
.gold #card-element-right {left: 18px;}
.gold #card-element-left {clip-path: polygon(0 0, 91px 0, 91px 100%, 0 100%);}
.gold #card-element-center {
    transform-origin: 91px;
    clip-path: polygon(91px 0, 92px 0, 92px 100%, 91px 100%);
}
.gold #card-element-right {
    left: 87px;
    clip-path: polygon(87px 0, 100% 0, 100% 100%, 87px 100%);
}

.diamond #card-element-left,
.diamond #card-element-center,
.diamond #card-element-right {top: 2px; left: 24px;}
.diamond #card-element-right {
    left: 93px;
}

.bronze #card-level {top: 4px; left: 295px; width: 64px;}
.silver #card-level,
.gold #card-level {top: 5px; left: 296px; width: 62px;}
.diamond #card-level {top: 3px; left: 295px; width: 64px;}

#card-bottom {bottom: 3px;}
.bronze #card-bottom {left: 17px;}
.silver #card-bottom {left: 17px;}
.gold #card-bottom {left: 18px;}
.diamond #card-bottom {left: 23px;}

#card-energy {
    bottom: 11px;
    left: 50px;
    width: 295px;
    text-align: center;
}

#card-energy > img {
    width: 20px;
    margin: 0 2px;
}

#preview > input[type='text'] {
    background: none;
    /* background: #fff4; */
    color: white;
    font-family: 'Washington', 'Cinema', 'Dodam';
    text-align: center;
    text-transform: uppercase;
    text-shadow: 0.07em 0.07em black;
    padding: 0;
    border: none;
    border-radius: 0;
    margin: 0;
}
#card-element-text,
#card-level-text {font-size: 31px; line-height: 60px;}
#preview #card-element-text {top: 10px; left: 109px; width: 150px; text-align: left;}
#card-level-text {top: 6px; left: 297px; width: 60px;}

#card-variant,
#card-fighter {width: 100%;}
#card-variant {bottom: 89px; line-height: 60px; font-size: 58px;}
#card-fighter {bottom: 51px; line-height: 40px; font-size: 38px;}

/* MENU */

#menu {
    min-height: 609px;
    width: max-content;
    background: var(--fg);
    color: white;
    padding: 8px;
    border: 3px double var(--bg);
    border-radius: 16px;
    margin: auto;
}

#menu > .column {
    vertical-align: top;
    display: inline-block;
}

h1, h2, h3, label {
    font-family: 'Cinema';
    text-transform: uppercase;
    text-shadow: 0.1em 0.1em black;
    letter-spacing: 0.1em;
    margin: 4px;
}

h1 {
    text-align: center;
}

/* MENU HOLES */

#preview,
input[type='radio'] + label,
input[type='file'],
input[type='text'],
input[type='number'] {
    background: var(--bg);
    color: var(--fg);
    padding: 8px;
    border: 3px double var(--fg);
    border-radius: 8px;
    outline: none;
    margin: 4px;
}

input[type='radio'] + label:hover,
input[type='file']:hover,
input[type='text']:hover,
input[type='number']:hover {
    border-color: white;
}

input[type='radio']:checked + label,
input[type='file']:focus,
input[type='text']:focus,
input[type='number']:focus {
    background: var(--fg);
    color: var(--bg);
    border-color: var(--bg);
}

input[type='radio'] {
    display: none;
}

input[type='radio'] + label {
    height: 32px;
    min-width: 32px;
    background: var(--fg);
    border-color: var(--bg);
    text-align: center;
    vertical-align: top;
    display: inline-block;
    cursor: pointer;
}
input[type='radio']:checked + label {
    background: var(--bg);
    border-color: var(--fg);
}

input[type='radio'] + label img {
    max-height: 32px;
    max-width: 32px;
}

input[type='file'],
input[type='text'],
input[type='number'] {
    font-family: 'Cinema';
    font-size: 18px;
    text-transform: uppercase;
}

input[type='number'] {
    width: 3em;
}

/* PREVIEW */

#preview {
    position: relative;
    width: 395px;
    height: 504px;
    padding: 0;
    overflow: hidden;
}

#exported {
    display: block;
}

.gradient-strip {
    background: linear-gradient(to right, black, white);
    height: 10px;
}

